--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@ footer{ text-align:center; padding:20px; background:#111; margin-top:40px; color
 <nav>
 <a href="#">Home</a>
 <a href="#games">Games</a>
-<a href="https://github.com/KumarAyush26/Tic-Tac-Toe" target="_blank">GitHub For Game</a>
-<a href="https://github.com/KumarAyush26/Gaming-Platform" target="_blank">GitHub For This Platform</a>
 </nav>
 </header>
 <section class="hero">
@@ -47,7 +45,8 @@ footer{ text-align:center; padding:20px; background:#111; margin-top:40px; color
 </div>
 </section>
 <footer>
-<p>© 2025 Gaming Portal | Developed by Kumar Ayush</p>
+<p>Developed by Medhansh Jain</p>
 </footer>
 </body>
 </html>
+
