--- a/index.html
+++ b/index.html
@@ -2,51 +2,237 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Gaming Portal</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <style>
-body { margin:0; font-family: Arial; background:#0d0d0d; color:white; }
-header { background:#111; padding:20px; text-align:center; box-shadow:0 0 10px cyan; }
-nav a { margin:15px; color:#00eaff; font-size:18px; text-decoration:none; }
-.hero{ text-align:center; padding:80px 20px; }
-.hero h1{ font-size:55px; margin:0; }
-.hero p{ font-size:20px; margin-top:15px; color:#bfbfbf; }
+/* ===== LOADER ===== */
+#loader{
+ position:fixed;
+ width:100%;
+ height:100vh;
+ background:black;
+ display:flex;
+ flex-direction:column;
+ justify-content:center;
+ align-items:center;
+ z-index:2000;
+}
+
+.spinner{
+ width:70px;
+ height:70px;
+ border:6px solid #444;
+ border-top:6px solid #a200ff;
+ border-radius:50%;
+ animation:spin 1s linear infinite;
+}
+@keyframes spin{
+ from{transform:rotate(0deg);}
+ to{transform:rotate(360deg);}
+}
+
+#loader h1{
+ color:#a200ff;
+ margin-top:20px;
+ font-family:Arial;
+ letter-spacing:3px;
+}
+
+/* ===== THEME ===== */
+body{
+ margin:0;
+ font-family:Arial;
+ background:radial-gradient(circle at top,#1a0026,#050008);
+ color:white;
+ overflow-x:hidden;
+}
+
+header{
+ background:linear-gradient(90deg,#5f00ff,#a200ff);
+ padding:20px;
+ text-align:center;
+ box-shadow:0 0 20px #a200ff;
+ position:sticky;
+ top:0;
+ z-index:1000;
+}
+
+nav a{
+ margin:18px;
+ color:white;
+ font-size:18px;
+ text-decoration:none;
+ font-weight:bold;
+}
+
+.hero{
+ text-align:center;
+ padding:90px 20px;
+}
+
+.hero h1{
+ font-size:60px;
+ margin:0;
+ text-shadow:0 0 20px #a200ff;
+}
+
+.hero p{
+ font-size:20px;
+ color:#d0b3ff;
+}
+
 .games{
- display:flex; justify-content:center; gap:30px; flex-wrap:wrap; padding:40px;
+ display:flex;
+ justify-content:center;
+ gap:30px;
+ flex-wrap:wrap;
+ padding:50px;
 }
+
 .card{
- background:#1b1b1b; width:280px; padding:20px; border-radius:15px;
- text-align:center; box-shadow:0 0 15px #00eaff50; transition:0.3s;
+ background:linear-gradient(145deg,#220033,#12001f);
+ width:280px;
+ padding:25px;
+ border-radius:18px;
+ text-align:center;
+ box-shadow:0 0 20px #a200ff80;
+ transition:0.4s;
 }
-.card:hover{ transform:scale(1.05); box-shadow:0 0 20px #00eaff; }
+
+.card:hover{
+ transform:translateY(-10px) scale(1.05);
+ box-shadow:0 0 30px #cc66ff;
+}
+
+.card h2{ color:#cc66ff; }
+
 .card button{
- background:#00eaff; border:none; padding:10px 20px; border-radius:10px;
- font-size:18px; margin-top:15px; cursor:pointer; color:black;font-weight:bold;
+ background:linear-gradient(90deg,#a200ff,#ff00cc);
+ border:none;
+ padding:12px 25px;
+ border-radius:12px;
+ font-size:18px;
+ margin-top:15px;
+ cursor:pointer;
+ color:white;
+ font-weight:bold;
 }
-footer{ text-align:center; padding:20px; background:#111; margin-top:40px; color:#888; }
+
+#audioBtn{
+ position:fixed;
+ bottom:20px;
+ right:20px;
+ background:#a200ff;
+ color:white;
+ border:none;
+ padding:15px;
+ border-radius:50%;
+ font-size:20px;
+ cursor:pointer;
+ box-shadow:0 0 15px #a200ff;
+}
+
+#about{
+ text-align:center;
+ padding:60px 20px;
+ background:#12001f;
+}
+
+footer{
+ text-align:center;
+ padding:25px;
+ background:#0a0013;
+ color:#aaa;
+}
 </style>
 </head>
-<body>
+
+<body onload="hideLoader()">
+
+<!-- ===== LOADER SCREEN ===== -->
+<div id="loader">
+ <div class="spinner"></div>
+ <h1>LOADING...</h1>
+</div>
+
+<!-- ===== BACKGROUND MUSIC ===== -->
+<audio id="bgMusic" loop>
+ <source src="https://cdn.pixabay.com/audio/2022/03/31/audio_6bd297d40c.mp3" type="audio/mpeg">
+</audio>
+
+<button id="audioBtn" onclick="toggleMusic()">🎵</button>
+
+<!-- ===== NAV BAR ===== -->
 <header>
 <nav>
-<a href="#">Home</a>
-<a href="#games">Games</a>
+ <a href="#">Home</a>
+ <a href="#games">Games</a>
+ <a href="#about">About</a>
 </nav>
 </header>
+
+<!-- ===== HERO ===== -->
 <section class="hero">
-<h1>Welcome to the Gaming Portal</h1>
-<p>Play fun and interactive browser games created using HTML, CSS & JavaScript</p>
+<h1>Neon Gaming Portal</h1>
+<p>Next-Gen Browser Games with Music, Animation & Effects</p>
 </section>
+
+<!-- ===== GAMES ===== -->
 <section id="games" class="games">
+
 <div class="card">
 <h2>Tic Tac Toe</h2>
-<p>Click below to play this game.</p>
-<button onclick="window.open('https://kumarayush26.github.io/Tic-Tac-Toe/','_blank');">Play Now</button>
+<p>Classic strategy duel.</p>
+<button onclick="window.open('https://kumarayush26.github.io/Tic-Tac-Toe/','_blank')">Play Now</button>
 </div>
+
+<div class="card">
+<h2>Snake Game</h2>
+<p>Eat. Grow. Survive.</p>
+<button onclick="window.open('snake.html','_blank')">Play Now</button>
+</div>
+
+<div class="card">
+<h2>Coming Soon</h2>
+<p>More cyber games loading...</p>
+<button disabled>Locked</button>
+</div>
+
 </section>
+
+<!-- ===== ABOUT ===== -->
+<section id="about">
+<h2>About This Portal</h2>
+<p>This cyber-themed gaming portal is developed using HTML5, CSS3, JavaScript, animations, and sound integration for an immersive experience.</p>
+</section>
+
+<!-- ===== FOOTER ===== -->
 <footer>
-<p>Developed by Medhansh Jain</p>
+<p>Developed by Medhansh Medhansh ⚡</p>
 </footer>
+
+<!-- ===== JAVASCRIPT ===== -->
+<script>
+let music = document.getElementById("bgMusic");
+let btn = document.getElementById("audioBtn");
+
+function toggleMusic(){
+ if(music.paused){
+   music.play();
+   btn.innerHTML="🔊";
+ }else{
+   music.pause();
+   btn.innerHTML="🎵";
+ }
+}
+
+function hideLoader(){
+ setTimeout(()=>{
+  document.getElementById("loader").style.display="none";
+ },2000);
+}
+</script>
+
 </body>
 </html>
-
