--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ footer{
 
 <!-- ===== HERO ===== -->
 <section class="hero">
-<h1>Neon Gaming Portal</h1>
+<h1>Gaming Portal</h1>
 <p>Next-Gen Browser Games with Music, Animation & Effects</p>
 </section>
 
@@ -185,12 +185,6 @@ footer{
 <h2>Tic Tac Toe</h2>
 <p>Classic strategy duel.</p>
 <button onclick="window.open('https://kumarayush26.github.io/Tic-Tac-Toe/','_blank')">Play Now</button>
-</div>
-
-<div class="card">
-<h2>Snake Game</h2>
-<p>Eat. Grow. Survive.</p>
-<button onclick="window.open('snake.html','_blank')">Play Now</button>
 </div>
 
 <div class="card">
@@ -209,7 +203,7 @@ footer{
 
 <!-- ===== FOOTER ===== -->
 <footer>
-<p>Developed by Medhansh Medhansh ⚡</p>
+<p>Developed by Medhansh Jain </p>
 </footer>
 
 <!-- ===== JAVASCRIPT ===== -->
@@ -236,3 +230,4 @@ function hideLoader(){
 
 </body>
 </html>
+
