--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ footer{
 
 <!-- ===== BACKGROUND MUSIC ===== -->
 <audio id="bgMusic" loop>
- <source src="https://cdn.pixabay.com/audio/2022/03/31/audio_6bd297d40c.mp3" type="audio/mpeg">
+ <source src="https://mj11237p.github.io/medhanshgame/bg.mp3.mp3" type="audio/mpeg">
 </audio>
 
 <button id="audioBtn" onclick="toggleMusic()">🎵</button>
@@ -184,7 +184,7 @@ footer{
 <div class="card">
 <h2>Tic Tac Toe</h2>
 <p>Classic strategy duel.</p>
-<button onclick="window.open('https://kumarayush26.github.io/Tic-Tac-Toe/','_blank')">Play Now</button>
+<button onclick="window.open('https://mj11237p.github.io/TICTACTOE/','_blank')">Play Now</button>
 </div>
 
 <div class="card">
@@ -230,4 +230,5 @@ function hideLoader(){
 
 </body>
 </html>
+
 
